# onelib-converter

./: .gitignore  BITWISE_COMPARISON_RESULTS.md  CLAUDE.md  COMPARISON_SUMMARY.md  DUAL_ROW_DISCOVERY.md  HARDWARE_TESTING_GUIDE.md  PHASE_2_COMPLETE.md  README.md  REMAINING_WORK_100_PERCENT.md  pyproject.toml  requirements.txt  test_pdb.sh
docs/: ACHIEVABLE_WORK.md  BITWISE_MATCH_CHALLENGE.md  BLOCKER_RESEARCH_PLAN.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_RESEARCH_PLAN.md  ONLINE_RESEARCH.md  PDB_ENHANCEMENT_SUMMARY.md  PDB_FORMAT_FIXES_SUMMARY.md  PDB_FORMAT_SPECIFICATION.md  REX_COMPLIANT_PDB_STATUS.md
research/: Blocker_Research_Results.md  Implementation_Research_Results.md  OneLib_to_DeviceLib_Research_Report.md  PDB_Binary_Structure_Analysis.md  PDB_Format_Reverse_Engineering_Report.md
scripts/: validate_conversion.sh
src/onelib_to_devicelib/: __init__.py  cli.py  convert.py
src/onelib_to_devicelib/parsers/: __init__.py  onelib.py
src/onelib_to_devicelib/readers/: __init__.py  pdb_reader.py
src/onelib_to_devicelib/utils/: __init__.py  paths.py
src/onelib_to_devicelib/writers/: __init__.py  anlz.py  dstring.py  heap.py  metadata.py  metadata_extractor.py  metadata_rows.py  page.py  pdb.py  pdb_v2.py  pdb_v3.py  rowset.py  special_pages.py  track.py
tests/: __init__.py  check_corruption.py  compare_pdb_pages.py  compare_pdb_structure.py  compare_pdb_tracks.py  compare_validation_data.py  run_full_comparison.sh  test_convert.py  test_integration_pdb.py  test_pdb_comparison.py  test_pdb_enhancements.py  test_pdb_fixes.py  test_pdb_validation.py  test_special_pages.py
tests/comparators/: __init__.py  pdb_comparator.py
