[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onelib-to-devicelib"
version = "1.0.0"
description = "Convert OneLibrary USB drives to dual-format (OneLibrary + Device Library) for Pioneer DJ hardware"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC-BY-SA-4.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["dj", "rekordbox", "pioneer", "cdj", "music", "library", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: Creative Commons Attribution Share Alike 4.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.3.1",
    "pyrekordbox>=0.4.0",
    "sqlcipher3-wheels>=0.5.7",
    "kaitaistruct>=0.11",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    # Audio analysis
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]
analysis = [
    "madmom>=0.16.0",
]

[project.scripts]
onelib-to-devicelib = "onelib_to_devicelib.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/onelib-to-devicelib"
Repository = "https://github.com/yourusername/onelib-to-devicelib"
Issues = "https://github.com/yourusername/onelib-to-devicelib/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
onelib_to_devicelib = ["*.ksy", "*.json", "*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
